ogg meta tags for share link in social networks

--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vino Genie</title>
-    <meta name="description" content="Wine analysis and pairing application" />
+    <title>WineWise - Tu asistente inteligente del vino</title>
+    <meta name="description" content="Escanea etiquetas, descubre maridajes perfectos y encuentra el vino ideal para cada ocasión con el poder de la inteligencia artificial." />
+    <meta name="keywords" content="vino, wine, maridaje, pairing, IA, inteligencia artificial, recomendaciones, escanear etiqueta" />
+    <meta name="author" content="WineWise" />
 
-    <meta property="og:title" content="Vino Genie" />
-    <meta property="og:description" content="Wine analysis and pairing application" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wines.usain.io/" />
+    <meta property="og:title" content="WineWise - Tu asistente inteligente del vino" />
+    <meta property="og:description" content="Escanea etiquetas, descubre maridajes perfectos y encuentra el vino ideal para cada ocasión con el poder de la IA. ✨🍷" />
+    <meta property="og:image" content="https://wines.usain.io/og-image.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="WineWise - Tu asistente inteligente del vino impulsado por IA" />
+    <meta property="og:site_name" content="WineWise" />
+    <meta property="og:locale" content="es_ES" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://wines.usain.io/" />
+    <meta name="twitter:title" content="WineWise - Tu asistente inteligente del vino" />
+    <meta name="twitter:description" content="Escanea etiquetas, descubre maridajes perfectos y encuentra el vino ideal para cada ocasión con el poder de la IA. ✨🍷" />
+    <meta name="twitter:image" content="https://wines.usain.io/og-image.svg" />
+    <meta name="twitter:image:alt" content="WineWise - Tu asistente inteligente del vino impulsado por IA" />
+
+    <!-- WhatsApp optimized -->
+    <meta property="og:image:type" content="image/svg+xml" />
+    
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#7C3AED" />
   </head>
 
   <body>
